cabal-version:      2.4
name:               Haskell1
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Haskell text adventure game

-- A longer description of the package.
description: CS2006 Haskell Project One. Very exciting adventure.

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: AllRightsReserved
author:             Fiona Killalea and Yue Ning Law
maintainer:         fk53@st-andrews.ac.uk

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable Haskell1
    main-is:          Adventure.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.2.0
    hs-source-dirs:   src
    default-language: Haskell2010
-- can add QuickCheck dependencies